fixed api's to save and fetch tasks
